force-app/main/default/objects/BrokerApplicant__c/fields/ApplicantFullName__c.field-meta.xml
<CustomField>
    <fullName>ApplicantFullName__c</fullName>
    <formula>IF(
ISBLANK(MiddleName__c ),
FirstName__c  &amp; &quot; &quot; &amp;  LastName__c ,
FirstName__c  &amp; &quot; &quot; &amp; MiddleName__c  &amp; &quot; &quot; &amp; LastName__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApplicantFullName</label>
    <type>Text</type>
</CustomField>