force-app/main/default/objects/BrokerApplicant__c/fields/ApprovalComments__c.field-meta.xml
<CustomField>
    <fullName>ApprovalComments__c</fullName>
    <label>Approval Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>