force-app/main/default/objects/BrokerApplicant__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved by BBM</fullName>
            </value>
            <value>
                <fullName>Rejected by BBM</fullName>
            </value>
            <value>
                <fullName>Approved by BL</fullName>
            </value>
            <value>
                <fullName>Rejected by BL</fullName>
            </value>
            <value>
                <fullName>Under Agreement</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>