force-app/main/default/objects/BrokerApplicant__c/fields/BrokerApplication__c.field-meta.xml
<CustomField>
    <fullName>BrokerApplication__c</fullName>
    <label>Broker Application</label>
    <referenceTo>BrokerApplication__c</referenceTo>
    <relationshipLabel>Broker Applicants</relationshipLabel>
    <relationshipName>BrokerApplicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>