force-app/main/default/objects/BrokerApplicant__c/fields/BrokerContactRole__c.field-meta.xml
<CustomField>
    <fullName>BrokerContactRole__c</fullName>
    <label>Broker Contact Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>AuthorizedSignatoryOfficer</fullName>
                <label>Authorized Signatory Officer</label>
            </value>
            <value>
                <fullName>SuperAdmin</fullName>
                <label>Super Admin</label>
            </value>
            <value>
                <fullName>FinancialAdmin</fullName>
                <label>Financial Admin</label>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>