force-app/main/default/objects/BrokerApplicant__c/fields/DateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>DateOfBirth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>