force-app/main/default/objects/BrokerApplicant__c/fields/isAdmin__c.field-meta.xml
<CustomField>
    <fullName>isAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Admin</label>
    <type>Checkbox</type>
</CustomField>