force-app/main/default/objects/BrokerApplicant__c/fields/IsAgent__c.field-meta.xml
<CustomField>
    <fullName>IsAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Agent</label>
    <type>Checkbox</type>
</CustomField>