force-app/main/default/objects/BrokerApplicant__c/fields/IsAuthorizedSignatory__c.field-meta.xml
<CustomField>
    <fullName>IsAuthorizedSignatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Authorized Signatory</label>
    <type>Checkbox</type>
</CustomField>