force-app/main/default/objects/BrokerApplicant__c/fields/IsCEO__c.field-meta.xml
<CustomField>
    <fullName>IsCEO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CEO</label>
    <type>Checkbox</type>
</CustomField>