force-app/main/default/objects/BrokerApplicant__c/fields/IsFinancialAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsFinancialAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Financial Admin</label>
    <type>Checkbox</type>
</CustomField>