force-app/main/default/objects/BrokerApplicant__c/fields/IsOwner__c.field-meta.xml
<CustomField>
    <fullName>IsOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>