force-app/main/default/objects/BrokerApplicant__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner</label>
    <type>Checkbox</type>
</CustomField>