force-app/main/default/objects/BrokerApplicant__c/fields/IsSuperAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsSuperAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Super Admin</label>
    <type>Checkbox</type>
</CustomField>