force-app/main/default/objects/BrokerApplicant__c/fields/LeadConversionallowed__c.field-meta.xml
<CustomField>
    <fullName>LeadConversionallowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Conversion allowed</label>
    <type>Checkbox</type>
</CustomField>