force-app/main/default/objects/BrokerApplicant__c/fields/NationalID__c.field-meta.xml
<CustomField>
    <fullName>NationalID__c</fullName>
    <label>National ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>