force-app/main/default/objects/BrokerApplicant__c/fields/NationalIDExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>NationalIDExpiryDate__c</fullName>
    <label>National ID Expiry Date</label>
    <type>Date</type>
</CustomField>