force-app/main/default/objects/BrokerApplicant__c/fields/PassportExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>PassportExpiryDate__c</fullName>
    <label>Passport Expiry Date</label>
    <type>Date</type>
</CustomField>