force-app/main/default/objects/BrokerApplicant__c/fields/PassportNumber__c.field-meta.xml
<CustomField>
    <fullName>PassportNumber__c</fullName>
    <label>Passport Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>