force-app/main/default/objects/BrokerApplicant__c/fields/RFICount__c.field-meta.xml
<CustomField>
    <fullName>RFICount__c</fullName>
    <label>RFI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>