force-app/main/default/objects/BrokerApplicant__c/fields/ShareHoldingPercentage__c.field-meta.xml
<CustomField>
    <fullName>ShareHoldingPercentage__c</fullName>
    <label>Share Holding Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>