force-app/main/default/objects/BrokerApplicant__c/fields/TypeofEstablishment__c.field-meta.xml
<CustomField>
    <fullName>TypeofEstablishment__c</fullName>
    <label>Type of Establishment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>